Bug 67192 	Make the sectioin in task view panel collapsable.
http://bugzilla.zimbra.com/show_bug.cgi?id=67192

--- a/ZimbraWebClient/WebRoot/admin_skins/serenity/skin.css
+++ b/ZimbraWebClient/WebRoot/admin_skins/serenity/skin.css
@@ -329,6 +329,7 @@ body {
 }
 
 .DwtListView-Column,
+.ZaTaskTitleNameHeader,
 .ZaCurrentAppBar{
   background-color: #c5c6cb;
   background-image: -moz-linear-gradient(top, #dfe1ef, #b9bbbf); /* FF3.6 */
